--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="/layout/default">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello</title>
 </head>
 <body>
 
-Hello SPring Boot
+<div class="row" layout:fragment="content">
+    <h2 class="indigo-text">Hello, welcome to Spring Boot.</h2>
+</div>
 
 </body>
 </html>
