Continue to do news module, now can either view news list or view one news.

--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -18,12 +18,12 @@ scale=1, maximum-scale=1.0, user-scalable=no"/>
     <div class="row">
         <div class="nav-wrapper">
             <div class="container">
-                <a href="/" class="brand-logo">News WebSite</a>
+                <a href="/" class="brand-logo">新闻网</a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="col s6 offset-s8 hide-on-med-and-down center">
-                    <li><a href="#"><i class="material-icons left">fiber_new</i>Latest</a></li>
-                    <li><a href="#"><i class="material-icons left">list</i>Recommend</a></li>
-                    <li><a href="#"><i class="material-icons left">person</i>Profile</a></li>
+                    <li><a href="/viewNews"><i class="material-icons left">fiber_new</i>最新</a></li>
+                    <li><a href="#"><i class="material-icons left">list</i>推荐</a></li>
+                    <li><a href="#"><i class="material-icons left">person</i>资料</a></li>
                 </ul>
                 <!--Side nav bar content-->
                 <ul class="side-nav" id="mobile-demo">
@@ -32,15 +32,15 @@ scale=1, maximum-scale=1.0, user-scalable=no"/>
                             <img src="/images/wave.jpg"/>
                         </div>
                         <a href="#"><img class="circle" src="/images/profile.jpg"/></a>
-                        <a href="#"><span class="white-text name">Frank Adam</span></a>
+                        <a href="#"><span class="white-text name">Adam</span></a>
                         <a href="#"><span class="white-text email">user@email.com</span></a>
                     </div></li>
-                    <li><a href="#"><i class="material-icons left">fiber_new</i>Latest</a></li>
-                    <li><a href="#"><i class="material-icons left">list</i>Recommend</a></li>
-                    <li><a href="#"><i class="material-icons left">person</i>Profile</a></li>
+                    <li><a href="/viewNews"><i class="material-icons left">fiber_new</i>最新</a></li>
+                    <li><a href="#"><i class="material-icons left">list</i>推荐</a></li>
+                    <li><a href="#"><i class="material-icons left">person</i>资料</a></li>
                     <li><div class="divider"></div> </li>
                     <li>
-                        <a href="#"><i class="material-icons left">exit_to_app</i>Logout</a>
+                        <a href="#"><i class="material-icons left">exit_to_app</i>注销</a>
                     </li>
                 </ul>
             </div>
@@ -54,7 +54,7 @@ scale=1, maximum-scale=1.0, user-scalable=no"/>
 
 <footer class="page-footer">
     <div class="row container">
-        <h6 class="white-text center-align">Welcome to News Website project.</h6>
+        <h6 class="white-text center-align">新闻网致力于为广大用户提供最好的推荐体验。</h6>
     </div>
 
     <div class="footer-copyright">
