--- a/src/main/resources/templates/news/viewNewsDetail.html
+++ b/src/main/resources/templates/news/viewNewsDetail.html
@@ -36,20 +36,26 @@
                 </div>
             </div>
             <div class="card">
-                <div class="row">
-                    <a id="fav" class="col s1 blue-text text-lighten-1" style="cursor: pointer; margin-left: 2%;" onclick="fav()"><i class="material-icons left">thumb_up</i></a>
-                    <a id="unfav" class="col s1 blue-text text-lighten-1" style="cursor: pointer; margin-right: 2%;" onclick="unfav()"><i class="material-icons left">thumb_down</i></a>
-                    <div class="col s9">
-                        <div class="row">
-                            <a id="star0" class="col s1" style="cursor: pointer;" onclick="star0()"><i id="star0ic" class="material-icons left">star_border</i></a>
-                            <a id="star1" class="col s1" style="cursor: pointer;" onclick="star1()"><i id="star1ic" class="material-icons left">star_border</i></a>
-                            <a id="star2" class="col s1" style="cursor: pointer;" onclick="star2()"><i id="star2ic" class="material-icons left">star_border</i></a>
-                            <a id="star3" class="col s1" style="cursor: pointer;" onclick="star3()"><i id="star3ic" class="material-icons left">star_border</i></a>
-                            <a id="star4" class="col s1" style="cursor: pointer;" onclick="star4()"><i id="star4ic" class="material-icons left">star_border</i></a>
-                            <span class="col s6 right">0人评价</span>
+                <form th:action="|/viewNews/${news.id}/evaluation|" method="post">
+                    <div class="row">
+                        <a id="fav" class="col s1 blue-text text-lighten-1" style="cursor: pointer; margin-left: 2%;" onclick="fav()"><i class="material-icons left">thumb_up</i></a>
+                        <a id="unfav" class="col s1 blue-text text-lighten-1" style="cursor: pointer; margin-right: 2%;" onclick="unfav()"><i class="material-icons left">thumb_down</i></a>
+                        <div class="col s9">
+                            <div class="row">
+                                <a id="star0" class="col s1" style="cursor: pointer;" onclick="star0()"><i id="star0ic" class="material-icons left">star_border</i></a>
+                                <a id="star1" class="col s1" style="cursor: pointer;" onclick="star1()"><i id="star1ic" class="material-icons left">star_border</i></a>
+                                <a id="star2" class="col s1" style="cursor: pointer;" onclick="star2()"><i id="star2ic" class="material-icons left">star_border</i></a>
+                                <a id="star3" class="col s1" style="cursor: pointer;" onclick="star3()"><i id="star3ic" class="material-icons left">star_border</i></a>
+                                <a id="star4" class="col s1" style="cursor: pointer;" onclick="star4()"><i id="star4ic" class="material-icons left">star_border</i></a>
+                                <input id="isLike" name="isLike" th:field="${evaluation.isLike}" type="text" hidden="hidden" value="undefined"/>
+                                <input id="isDislike" name="isDislike" th:field="${evaluation.isDislike}" type="text" hidden="hidden" value="undefined"/>
+                                <input id="score" th:field="${evaluation.score}" type="text" value="0.0" hidden="hidden"/>
+                                <input style="margin-left: 40px" class="center" id="submitEvaluation" name="submitEvaluation" type="submit" value="提交评价"/>
+                            </div>
                         </div>
+
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
@@ -57,21 +63,33 @@
 </div>
 
 <script type="text/javascript" layout:fragment="script">
+    function mkchecked(e) {
+        e.attr("value","yes");
+    }
+    function unchecked(e) {
+        e.attr("value","no");
+    }
     <!--未点击-light   点击-dark-->
+    var $fav = $('#fav');var $unfav = $('#unfav');
+    var $favck = $('#isLike');var $unfavck = $('#isDislike');
     function fav() {
-        if ($('#fav').attr("class") === 'col s1 blue-text text-darken-2'){
-            $('#fav').attr("class", "col s1 blue-text text-lighten-1");
+        if ($fav.attr("class") === 'col s1 blue-text text-darken-2'){
+            $fav.attr("class", "col s1 blue-text text-lighten-1");
+            unchecked($favck);
         } else {
-            $('#fav').attr("class", "col s1 blue-text text-darken-2");
-            $('#unfav').attr("class", "col s1 blue-text text-lighten-1");
+            $fav.attr("class", "col s1 blue-text text-darken-2");
+            $unfav.attr("class", "col s1 blue-text text-lighten-1");
+            mkchecked($favck);unchecked($unfavck);
         }
     }
     function unfav() {
-        if ($('#unfav').attr("class")==='col s1 blue-text text-darken-2'){
-            $('#unfav').attr("class", "col s1 blue-text text-lighten-1");
+        if ($unfav.attr("class")==='col s1 blue-text text-darken-2'){
+            $unfav.attr("class", "col s1 blue-text text-lighten-1");
+            unchecked($unfavck);
         } else {
-            $('#unfav').attr("class", "col s1 blue-text text-darken-2");
-            $('#fav').attr("class", "col s1 blue-text text-lighten-1");
+            $unfav.attr("class", "col s1 blue-text text-darken-2");
+            $fav.attr("class", "col s1 blue-text text-lighten-1");
+            mkchecked($unfavck);unchecked($favck);
         }
     }
     function mkstar(ic,e) {
@@ -83,20 +101,24 @@
         e.attr("class","col s1 blue-text text-lighten-1");
     }
 
+
     var $star0ic = $('#star0ic'); var $star0 = $('#star0');
     var $star1ic = $('#star1ic'); var $star1 = $('#star1');
     var $star2ic = $('#star2ic'); var $star2 = $('#star2');
     var $star3ic = $('#star3ic'); var $star3 = $('#star3');
     var $star4ic = $('#star4ic'); var $star4 = $('#star4');
     var curLoc = -1;
+    var $score = $('#score');
 
     function star0() {
         if ($star0ic.text() === 'star_border') {
             mkstar($star0ic,$star0);
             curLoc = 0;
+            $score.attr("value","1.0");
         } else if (curLoc === 0) {
             unstar($star0ic,$star0);
             curLoc = -1;
+            $score.attr("value","0.0");
         }
     }
     function star1() {
@@ -104,10 +126,12 @@
             mkstar($star0ic,$star0);
             mkstar($star1ic,$star1);
             curLoc = 1;
+            $score.attr("value","2.0");
         } else if (curLoc === 1) {
             unstar($star0ic, $star0);
             unstar($star1ic, $star1);
             curLoc = -1;
+            $score.attr("value","0.0");
         }
     }
     function star2() {
@@ -116,11 +140,13 @@
             mkstar($star1ic,$star1);
             mkstar($star2ic,$star2);
             curLoc = 2;
+            $score.attr("value","3.0");
         } else if (curLoc === 2) {
             unstar($star0ic, $star0);
             unstar($star1ic, $star1);
             unstar($star2ic, $star2);
             curLoc = -1;
+            $score.attr("value","0.0");
         }
     }
     function star3() {
@@ -130,12 +156,14 @@
             mkstar($star2ic, $star2);
             mkstar($star3ic, $star3);
             curLoc = 3;
+            $score.attr("value","4.0");
         } else if (curLoc === 3) {
             unstar($star0ic, $star0);
             unstar($star1ic, $star1);
             unstar($star2ic, $star2);
             unstar($star3ic, $star3);
             curLoc = -1;
+            $score.attr("value","0.0");
         }
     }
     function star4() {
@@ -146,6 +174,7 @@
             mkstar($star3ic,$star3);
             mkstar($star4ic,$star4);
             curLoc = 4;
+            $score.attr("value","5.0");
         } else if (curLoc === 4) {
             unstar($star0ic, $star0);
             unstar($star1ic, $star1);
@@ -153,6 +182,7 @@
             unstar($star3ic, $star3);
             unstar($star4ic, $star4);
             curLoc = -1;
+            $score.attr("value","0.0");
         }
     }
 
