--- a/src/main/resources/templates/news/viewNewsDetail.html
+++ b/src/main/resources/templates/news/viewNewsDetail.html
@@ -15,6 +15,7 @@
             <div class="nav-wrapper">
                 <div class="col s12">
                     <a href="/" class="breadcrumb">首页</a>
+                    <a href="/viewNews" class="breadcrumb">最新新闻</a>
                     <a class="breadcrumb">新闻详情</a>
                 </div>
             </div>
