--- a/src/main/resources/templates/news/viewNewsList.html
+++ b/src/main/resources/templates/news/viewNewsList.html
@@ -15,7 +15,7 @@
             <div class="nav-wrapper">
                 <div class="col s12">
                     <a href="/" class="breadcrumb">首页</a>
-                    <a class="breadcrumb">最新</a>
+                    <a class="breadcrumb">最新新闻</a>
                 </div>
             </div>
         </nav>
