--- a/src/main/resources/templates/news/viewNewsDetail.html
+++ b/src/main/resources/templates/news/viewNewsDetail.html
@@ -7,10 +7,14 @@
 </head>
 <body>
 
-<div class="row" layout:fragment="content">
+<div class="container" layout:fragment="content">
+
+    <div id="row errMsg" class="card-panel red lighten-2" th:if="${error}">
+        <span class="card-title" th:text="${error}"></span>
+    </div>
 
     <!--Breadcrumb-->
-    <div class="row container">
+    <div class="row">
         <nav>
             <div class="nav-wrapper">
                 <div class="col s12">
@@ -22,7 +26,7 @@
         </nav>
     </div>
 
-    <div class="row container">
+    <div class="row">
         <div class="col s12" th:object="${news}">
             <div class="card indigo darken-2">
                 <div class="card-content white-text">
