Add basic signup module.

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container" layout:fragment="content">
     <!--Breadcrumb-->
-    <div class="row container">
+    <div class="row">
         <nav>
             <div class="nav-wrapper">
                 <div class="col s12">
