--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -19,11 +19,11 @@ scale=1, maximum-scale=1.0, user-scalable=no"/>
         <div class="nav-wrapper">
             <div class="container">
                 <a href="/" class="brand-logo">新闻网</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <a data-activates="mobile-demo" class="button-collapse" style="cursor: pointer; "><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="col s6 offset-s8 hide-on-med-and-down center">
                     <li><a href="/viewNews"><i class="material-icons left">fiber_new</i>最新</a></li>
-                    <li><a href="#"><i class="material-icons left">list</i>推荐</a></li>
-                    <li><a href="#"><i class="material-icons left">person</i>资料</a></li>
+                    <li><a href="/signup"><i class="material-icons left">list</i>推荐</a></li>
+                    <li><a href="/signup"><i class="material-icons left">person</i>资料</a></li>
                 </ul>
                 <!--Side nav bar content-->
                 <ul class="side-nav" id="mobile-demo">
@@ -31,13 +31,13 @@ scale=1, maximum-scale=1.0, user-scalable=no"/>
                         <div class="background">
                             <img src="/images/wave.jpg"/>
                         </div>
-                        <a href="#"><img class="circle" src="/images/profile.jpg"/></a>
-                        <a href="#"><span class="white-text name">Adam</span></a>
-                        <a href="#"><span class="white-text email">user@email.com</span></a>
+                        <a href="/signup"><img class="circle" src="/images/profile.jpg"/></a>
+                        <a><span class="white-text name">Adam</span></a>
+                        <a><span class="white-text email">user@email.com</span></a>
                     </div></li>
                     <li><a href="/viewNews"><i class="material-icons left">fiber_new</i>最新</a></li>
-                    <li><a href="#"><i class="material-icons left">list</i>推荐</a></li>
-                    <li><a href="#"><i class="material-icons left">person</i>资料</a></li>
+                    <li><a href="/signup"><i class="material-icons left">list</i>推荐</a></li>
+                    <li><a href="/signup"><i class="material-icons left">person</i>资料</a></li>
                     <li><div class="divider"></div> </li>
                     <li>
                         <a href="#"><i class="material-icons left">exit_to_app</i>注销</a>
