--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default">
+      layout:decorator="layout/layout_login">
 <head>
     <meta charset="UTF-8"/>
     <title>login</title>
 </head>
 <body>
 
-<div layout:fragment="content">
+<div class="container" layout:fragment="content">
 
-    This is login.html.
+    <h2 class="header center orange-text">Login</h2>
+    <div class="row">
+        <div id="errMsg" class="row card-panel red lighten-2" th:if="${error}">
+            <span class="card-title" th:text="${error}"></span>
+        </div>
 
+        <form class="col s12" action="/login" method="post" th:object="${loginForm}">
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="username" name="username" th:field="${loginForm.username}" type="text" class="validate" placeholder="User" required="required"/>
+                    <label for="username">Username</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="password" name="password" th:field="${loginForm.password}" type="password" class="validate" required="required"/>
+                    <label for="password">Password</label>
+                </div>
+            </div>
+            <div class="row center">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                    <i class="mdi-content-send right"></i> </button>
+            </div>
+            <!--标签名一定是th:name、th:value，否则摔跟头！-->
+            <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+        </form>
+    </div>
 </div>
 
 <script layout:fragment="script">
