--- a/src/main/resources/templates/signup/signup.html
+++ b/src/main/resources/templates/signup/signup.html
@@ -34,7 +34,7 @@
             <div class="row">
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person</i>
-                    <input class="validate" th:field="${userForm.name}" id="userName" type="text" required="required"/>
+                    <input class="validate" th:field="${userForm.name}" id="userName" type="text" required="required" data-length="12"/>
                     <label for="userName">用户名</label>
                 </div>
             </div>
@@ -51,12 +51,8 @@
                 </div>
             </div>
             <div class="row">
-                <!--<div class="input-field col s12 m6">-->
-                    <!--<i class="material-icons prefix">sentiment_very_satisfied</i>-->
-                    <!--<input class="validate" th:field="${userForm.sex}" placeholder="男/女" id="sex" type="text" required="required"/>-->
-                    <!--<label for="sex">性别</label>-->
-                <!--</div>-->
                 <div class="input-field col s12 m6">
+                    <i class="material-icons prefix">sentiment_very_satisfied</i>
                     <select id="sexOptions">
                         <option>男</option>
                         <option>女</option>
@@ -84,10 +80,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 m6">
+                <!--<div class="input-field col s12 m6">-->
+                    <!--<i class="material-icons prefix">stars</i>-->
+                    <!--<input class="validate" th:field="${userForm.interests}" id="interests" placeholder="以英文,分隔" type="text" required="required" pattern="(.*,)*"/>-->
+                    <!--<label for="interests">兴趣</label>-->
+                <!--</div>-->
+                <div class="input-field col s12">
                     <i class="material-icons prefix">stars</i>
-                    <input class="validate" th:field="${userForm.interests}" id="interests" placeholder="以英文,分隔" type="text" required="required" pattern="(.*,)*"/>
-                    <label for="interests">兴趣</label>
+                    <div id="chips" class="chips chips-initial chips-placeholder chips-autocomplete"></div>
+                    <input id="interests" th:field="${userForm.interests}" type="text" value="" hidden="hidden"/>
                 </div>
             </div>
             <div class="row">
@@ -117,6 +118,34 @@
             }
         });
         $('select').formSelect();
+        $('input#userName').characterCounter();
+        $('#chips').chips({
+            placeholder: '添加兴趣标签',
+            secondaryPlaceholder: '+再来一个',
+            autocompleteOptions: {
+                data: {
+                    '公益':null,
+                    '滚动':null,
+                    '军事':null
+                }
+            },
+            onChipAdd: function (a,b) {
+                var chipContent = b.innerText;
+
+                var $ints = $('#interests');
+                $ints.attr("value", $ints.attr("value") + chipContent.substring(0, chipContent.length - 5) + ",");
+
+            },
+            onChipDelete: function () {
+                var $ints = $('#interests');
+                var last = $ints.attr("value").lastIndexOf(",",$ints.attr("value").length-2);
+                if (last ===-1) {
+                    $ints.attr("value","");
+                } else {
+                    $ints.attr("value",$ints.attr("value").substring(0,last+1));
+                }
+            }
+        });
     });
 
     function getSex() {
