--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -22,8 +22,8 @@ scale=1, maximum-scale=1.0, user-scalable=no"/>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="/viewNews"><i class="material-icons left">fiber_new</i>最新</a></li>
-                    <li><a href="/signup"><i class="material-icons left">list</i>推荐</a></li>
-                    <li><a href="/signup"><i class="material-icons left">person</i>资料</a></li>
+                    <li><a href="/recommend"><i class="material-icons left">list</i>推荐</a></li>
+                    <li><a href="/profile"><i class="material-icons left">person</i>资料</a></li>
                 </ul>
             </div>
         </div>
@@ -41,8 +41,8 @@ scale=1, maximum-scale=1.0, user-scalable=no"/>
                 </div>
             </li>
             <li><a href="/viewNews"><i class="material-icons left">fiber_new</i>最新</a></li>
-            <li><a href="/signup"><i class="material-icons left">list</i>推荐</a></li>
-            <li><a href="/signup"><i class="material-icons left">person</i>资料</a></li>
+            <li><a href="/recommend"><i class="material-icons left">list</i>推荐</a></li>
+            <li><a href="/profile"><i class="material-icons left">person</i>资料</a></li>
         </ul>
     </nav>
 </div>
